--- a/SIte/index.html
+++ b/SIte/index.html
@@ -9,21 +9,22 @@
 
 </head>
 <body>
+    
 <div class="v8_8">
     <div class="v9_1"><a href="https://vk.com/papashechka"style="color: #fff; text-decoration:none; font-size: 1.2em;">VK</a> </div>
     <div class="v9_2"><a href="https://www.instagram.com/weedbullone/"style="color: #fff; text-decoration:none; font-size: 1.2em;">Inst</a></div>
-    <div class="v9_3"><a href="https://t.me/weedbu11"style="color: #fff; text-decoration:none; font-size: 1.2em;">Telegram</a></div> 
-    <span class="v8_9">Люблю тебя❤️</span>
+    <div class="v9_3"><a href="https://t.me/weedbull"style="color: #fff; text-decoration:none; font-size: 1.2em;">Telegram</a></div> 
+    <span class="v8_9">Визитная карточка❤️</span>
 
 
-        <span class="v8_10">Поэтому иди суда :) </span>
+        <span class="v8_10">Weedbull`a :) </span>
         
         <!-- блок кнопки -->
     <div class="card two">
         <!-- Тени -->
             <div class="card-b b-two">   
-                <a href="https://t.me/weedbu11"style="color: #fff; text-decoration:none">
-                    <p class="buy">Суда</p>
+                <a href="https://t.me/weedbull"style="color: #fff; text-decoration:none">
+                    <p class="buy">Жми</p>
                 </a>
             </div>
     </div>
